# Athlyt

./: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: ca10796a2c38_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/routers/: __init__.py  auth.py  exercises.py  health.py  nutrition.py  progress.py  stats.py  users.py  workouts.py
backend/app/core/: __init__.py  config.py  exception_handlers.py  exceptions.py  logging_config.py  security.py  security_headers.py
backend/app/db/: __init__.py  base.py  seed_exercises.py  session.py
backend/app/ml/: README.md  __init__.py
backend/app/models/: README.md  __init__.py  body_measurement.py  enums.py  exercise.py  exercise_completion.py  nutrition.py  profile.py  progress_log.py  user.py  workout_day.py  workout_exercise.py  workout_plan.py  workout_session.py
backend/app/repositories/: __init__.py  exercise_completion_repository.py  exercise_repository.py  nutrition_repository.py  profile_repository.py  progress_repository.py  user_repository.py  workout_day_repository.py  workout_exercise_repository.py  workout_plan_repository.py  workout_session_repository.py
backend/app/schemas/: README.md  auth.py  exercise.py  progress_nutrition.py  recommendation.py  user.py  workout.py  workout_session.py
backend/app/services/: __init__.py  auth_service.py  exercise_service.py  metrics_service.py  nutrition_service.py  progress_service.py  recommendation_engine.py  recommendation_rules.py  recommendation_types.py  user_service.py  workout_day_service.py  workout_exercise_service.py  workout_plan_service.py  workout_planner_service.py  workout_recommendation_service.py  workout_splits.py  workout_stats_service.py  workout_tracking_service.py
backend/tests/: conftest.py  factories.py  test_auth.py  test_exercise_service.py  test_exercises_api.py  test_health.py  test_metrics_service.py  test_production_readiness.py  test_progress_nutrition.py  test_recommendation_rules.py  test_security.py  test_seed_exercises.py  test_users.py  test_workout_day_service.py  test_workout_exercise_service.py  test_workout_plan_service.py  test_workout_planner_api.py  test_workout_planner_service.py  test_workout_recommendation_service.py  test_workout_tracking_api.py  test_workout_tracking_service.py  test_workouts_api.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  PROJECT_BIBLE.md
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/(app)/: error.tsx  layout.tsx
frontend/app/(app)/dashboard/: page.tsx
frontend/app/(app)/nutrition/: page.tsx
frontend/app/(app)/onboarding/: page.tsx
frontend/app/(app)/progress/: page.tsx
frontend/app/(app)/settings/: loading.tsx  page.tsx
frontend/app/(app)/workouts/: page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/components/: backend-status.tsx  theme-toggle.tsx
frontend/components/providers/: query-provider.tsx  theme-provider.tsx
frontend/components/shared/: ambient-background.tsx  dashboard-stat-card.tsx  empty-state.tsx  glass-card.tsx  loading-skeleton.tsx  primary-button.tsx  section-header.tsx  sidebar.tsx  tilt-card.tsx
frontend/components/workouts/: active-workout-card.tsx  empty-workout-state.tsx  exercise-card.tsx  todays-workout-card.tsx  weekly-plan-card.tsx  welcome-card.tsx  workout-error-state.tsx  workout-skeletons.tsx
frontend/hooks/: use-current-user.ts  use-dashboard-data.ts  use-workout-session.ts  use-workouts.ts
frontend/lib/: api-client.ts  auth-token.ts  handle-auth-success.ts  profile-options.ts
frontend/lib/validators/: auth.ts  onboarding.ts
frontend/types/: health.ts  user.ts
ml/: README.md
ml/models/: README.md
ml/notebooks/: README.md
