[project]
name = "athlyt-backend"
version = "0.1.0"
description = "Athlyt backend — FastAPI app serving auth, profiles, workout/diet generation, and ML-based workout recommendations."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "sqlalchemy>=2.0,<2.1",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "pyjwt>=2.9,<2.10",
    "bcrypt>=4.2,<5.1",
    "python-multipart>=0.0.12",
    "email-validator>=2.2,<3.0",
    "scikit-learn>=1.5,<1.6",
    "joblib>=1.4,<1.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7,<0.8",
    "black>=24.10,<25.0",
    "pytest>=8.3,<8.4",
    "httpx>=0.27,<0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# Note: no mypy here. For a full enterprise build (see the earlier architecture
# discussion) strict mypy is worth the setup cost; for a one-week placement
# project it's friction without payoff — ruff already catches most real bugs
# (unused imports, undefined names, etc.) at a fraction of the configuration cost.

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
